# context-keeper

./: .env.example  .gitignore  LICENSE  README.md  build.sh  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: cli.py  config.py  main.py  models.py
backend/app/api/: routes.py
backend/app/dashboard/static/: index.html
backend/app/mcp/: server.py
backend/app/memory/: retrieval.py  store.py  sync.py
configs/: claude-code-mcp.json  cursor-mcp.json
extension/: .vscodeignore  package-lock.json  package.json
extension/src/: extension.ts
